# nerve-workstation

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: auth.rs  daemon.rs  lib.rs
crates/ctx-core/: Cargo.toml
crates/ctx-core/benches/: edit_engine.rs  engine_hot_paths.rs
crates/ctx-core/src/: build_context.rs  catalog.rs  codemap.rs  dispatch.rs  lib.rs  models.rs  navigate.rs  port.rs  ranking.rs  repomap.rs  search.rs  security.rs  selection.rs  token.rs  workspace.rs  workspace_context.rs
crates/ctx-core/src/build_context/: mod.rs  reference_expansion.rs
crates/ctx-core/src/catalog/: fs_scan.rs  mod.rs  tests.rs
crates/ctx-core/src/codemap/: ast.rs  block.rs  language.rs  mod.rs  symbols.rs  types.rs
crates/ctx-core/src/dispatch/: args.rs  editing.rs  error.rs  git.rs  handlers.rs  mod.rs  specs.rs  tests.rs  text.rs
crates/ctx-core/src/edit/: mod.rs
crates/ctx-core/src/navigate/: call_hierarchy.rs  definition.rs  mod.rs  references.rs  source.rs
crates/ctx-core/src/repomap/: analysis.rs  graph.rs  imports.rs  language.rs  mod.rs  rank.rs  symbols.rs  tests.rs
crates/ctx-core/src/search/: api.rs  content.rs  matcher.rs  mod.rs  path.rs
crates/ctx-core/src/semantic/: ann.rs  backend.rs  bm25.rs  chunk.rs  config.rs  index.rs  mod.rs  persistence.rs  persistence_rebuild.rs  scoring.rs
crates/ctx-core/tests/: build_context.rs  edit_proptest.rs  eval.rs  go_fixture.go  golden.rs  robustness.rs
crates/ctx-core/tests/eval_data/: queries.json
crates/ctx-core/tests/snapshots/: golden__golden_build_context.snap  golden__golden_file_search_literal_regex_and_path.snap  golden__golden_get_code_structure.snap  golden__golden_get_file_tree.snap  golden__golden_get_repo_map.snap  golden__golden_read_file_snap_block.snap  golden__golden_read_file_summary_view.snap  golden__golden_read_file_whole_and_slice.snap  golden__golden_workspace_context.snap
crates/ctx-ffi/: Cargo.toml
crates/ctx-ffi/src/: lib.rs
crates/ctx-mcp/: Cargo.toml
crates/ctx-mcp/src/: cache.rs  cli.rs  daemon.rs  jobs.rs  main.rs  rpc.rs  server.rs  tools.rs  workspace.rs
crates/ctx-mcp/src/auth/: callback.rs  commands.rs  mod.rs  oauth.rs  store.rs  util.rs
crates/ctx-mcp/src/commands/: cache.rs  config.rs  doctor.rs  install.rs  mod.rs
crates/ctx-mcp/src/daemon/: router.rs  tests.rs
crates/ctx-mcp/src/xai/: http.rs  mod.rs  specs.rs
crates/ctx-runtime/: Cargo.toml
crates/ctx-runtime/src/: adapter.rs  command.rs  error.rs  event.rs  job.rs  lib.rs  protocol.rs  protocol_codegen.rs  runtime.rs  tool_spec.rs
crates/ctx-wasm/: Cargo.toml
crates/ctx-wasm/examples/: node-smoke.js
crates/ctx-wasm/src/: lib.rs
crates/nerve-agent/: Cargo.toml
crates/nerve-agent/src/: error.rs  lib.rs  message.rs  orchestrator.rs
crates/nerve-agent/src/auth/: mod.rs  oauth.rs  store.rs  strategy.rs  strategy_flow.rs  strategy_tests.rs
crates/nerve-agent/src/orchestrator/: capabilities.rs  compaction.rs  mod.rs  overflow.rs  turn.rs
crates/nerve-agent/src/provider/: http.rs  mod.rs  openai_responses.rs  text_fallback.rs  xai.rs
crates/nerve-core/: Cargo.toml
crates/nerve-core/benches/: edit_engine.rs  engine_hot_paths.rs
crates/nerve-core/examples/: semantic_eval.rs
crates/nerve-core/src/: cancel.rs  ledger.rs  lib.rs  list_files.rs  models.rs  outcome.rs  policy.rs  port.rs  provenance.rs  ranking.rs  read.rs  receipt.rs  receipt_gate.rs  recipe.rs  runpin.rs  security.rs  selection.rs  selection_rebase.rs  snapshot.rs  sync.rs  tree.rs  verdict.rs  workspace.rs  workspace_context.rs
crates/nerve-core/src/build_context/: explain.rs  mod.rs  reference_expansion.rs  scout.rs  sensitive.rs
crates/nerve-core/src/catalog/: fs_atomic.rs  fs_scan.rs  memory.rs  memory_batch.rs  mod.rs
crates/nerve-core/tests/: build_context.rs  edit_proptest.rs  eval.rs  golden.rs  golden_navigate_ast.rs  golden_provenance.rs  relocated_changes_sensitive.rs  relocated_dispatch.rs  relocated_dispatch_internals.rs  relocated_graph.rs  relocated_navigate.rs  relocated_read_tree_list.rs  relocated_search.rs  relocated_selection_context.rs  robustness.rs
crates/nerve-fs/: Cargo.toml
crates/nerve-fs/src/: atomic.rs  lib.rs  provider.rs  registry.rs  scan.rs
crates/nerve-gui/: Cargo.toml  README.md  index.html  styles.css
crates/nerve-gui/src/: app.rs  approval.rs  artifact_export.rs  chat_backend.rs  chat_ops.rs  clipboard.rs  command.rs  command_catalog.rs  command_palette.rs  composer.rs  context_view.rs  data.rs  events.rs  host_capabilities.rs  inspector.rs  lib.rs  model.rs  project_rail.rs  render.rs  rpc.rs  scroll.rs  settings.rs  settings_auth.rs  sidebar.rs  topbar.rs  transcript.rs  wechat_panel.rs
crates/nerve-runtime/: Cargo.toml
crates/nerve-runtime/src/: adapter.rs  command.rs  error.rs  event.rs  job.rs  lib.rs  protocol.rs  runtime.rs  tool_spec.rs
crates/nerve-tui/: Cargo.toml
crates/nerve-tui/src/: lib.rs  main.rs  smoke.rs
crates/nerve-tui/tests/: render_snapshots.rs  smoke.rs
crates/nerve-wechat/: Cargo.toml
crates/nerve-wechat/src/: bridge.rs  config.rs  error.rs  gateway.rs  http.rs  lib.rs  login.rs  main.rs  nerve_client.rs  types.rs
crates/nerve-workstation/: Cargo.toml
crates/nerve-workstation/src/: agent.rs  agent_event.rs  agent_path.rs  agent_toolbox.rs  capabilities.rs  checkpoint.rs  cli.rs  cost.rs  daemon.rs  delegate.rs  delegate_codex_mcp.rs  delegate_live.rs  delegate_proxy.rs  delegate_roles.rs  delegate_runtime.rs  delegate_session.rs  delegate_store.rs  delegate_tool.rs  flow_job.rs  hooks.rs  jobs.rs  ledger_store.rs  main.rs  memory.rs  outcome_store.rs  policy.rs  policy_plane.rs  providers.rs  receipt_store.rs  run_store.rs  runconfig.rs  server.rs  session.rs  session_manager.rs  signer.rs  subagent.rs  substrate_mcp.rs  sync.rs  toolchain_pin.rs  tools.rs  (+2 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: codemap_parsers.rs  dispatch.rs  edit_engine.rs  repomap_tokenizer.rs  search_matcher.rs
(+321 files in other folders)
