[workspace]
members = ["crates/ctx-core", "crates/ctx-mcp", "crates/ctx-ffi"]
exclude = ["fuzz"]
resolver = "3"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
too_many_lines = "deny"
excessive_nesting = "deny"

[profile.release]
strip = true

[workspace.package]
version = "0.0.21"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/z23cc/context-engine-rs"

[workspace.dependencies]
anyhow = "1"
aho-corasick = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
memchr = "2"
nucleo-matcher = "0.3.1"
regex = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tempfile = "3"
insta = { version = "1", features = ["json", "redactions"] }
criterion = { version = "0.5", default-features = false }
fastembed = "5.17.2"
hnsw_rs = "0.3.4"
proptest = "1"
tiktoken-rs = { version = "0.12.0", default-features = false }
