[workspace]
members = ["crates/nerve-core", "crates/nerve-proto", "crates/nerve-fs", "crates/nerve-runtime", "crates/nerve-workstation", "crates/nerve-agent", "crates/nerve-tui", "crates/nerve-wechat", "crates/nerve-gui"]
# nerve-gui is a wasm32-only CSR crate: it depends on leptos/web-sys/gloo, which
# do not host-compile. Keeping it out of `default-members` means the engine's
# normal `cargo build/test --workspace` (host target) never tries to build it,
# while it stays a workspace member so it shares the lockfile + nerve-proto path.
# Build it explicitly with `trunk build` (cwd crates/nerve-gui) for wasm32.
default-members = ["crates/nerve-core", "crates/nerve-proto", "crates/nerve-fs", "crates/nerve-runtime", "crates/nerve-workstation", "crates/nerve-agent", "crates/nerve-tui", "crates/nerve-wechat"]
exclude = ["fuzz", "apps"]
resolver = "3"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
too_many_lines = "deny"
excessive_nesting = "deny"

[profile.release]
strip = true

[workspace.package]
version = "0.0.75"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/z23cc/nerve-workstation"

[workspace.dependencies]
nerve-proto = { path = "crates/nerve-proto" }
nerve-core = { path = "crates/nerve-core" }
nerve-fs = { path = "crates/nerve-fs" }
anyhow = "1"
directories = "6"
fs4 = "1"
aho-corasick = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
globset = "0.4"
memchr = "2"
nucleo-matcher = "0.3.1"
regex = "1"
rayon = "1"
base64 = "0.22"
ed25519-dalek = "2"
oauth2 = "5"
open = "5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
schemars = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tiny_http = "0.12"
ureq = { version = "3", features = ["json", "multipart"] }
url = "2"
libc = "0.2"
tempfile = "3"
insta = { version = "1", features = ["json", "redactions"] }
criterion = { version = "0.8", default-features = false }
proptest = "1"
tiktoken-rs = { version = "0.12.0", default-features = false }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
unicode-width = "0.2"
unicode-segmentation = "1"
qrcode = { version = "0.14", default-features = false }
