[package]
name = "ctx-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aho-corasick.workspace = true
ignore.workspace = true
memchr.workspace = true
nucleo-matcher.workspace = true
regex.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
oxc_parser.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true
oxc_allocator.workspace = true
ruff_python_parser.workspace = true
ruff_python_ast.workspace = true
ruff_text_size.workspace = true
tiktoken-rs.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
serde_json.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "engine_hot_paths"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
