[package]
name = "ctx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aho-corasick.workspace = true
memchr.workspace = true
nucleo-matcher.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
similar = "2"
tree-sitter = "0.26.9"
tree-sitter-tags = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ignore.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
serde_json.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "engine_hot_paths"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
