[package]
name = "ctx-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ctx_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
ctx-core = { path = "../ctx-core" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
