[package]
name = "ctx-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
semantic = ["ctx-core/semantic"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctx-core = { path = "../ctx-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
