[package]
name = "ctx-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
semantic = ["ctx-core/semantic"]

[dependencies]
anyhow.workspace = true
ctx-core = { path = "../ctx-core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
