[package]
name = "nerve-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Exposes a small `test_internals` re-export module (kernel-internal snapshot
# memos + a path-scoring helper) so the relocated provider-dependent integration
# tests in `tests/` can reach them. Off by default; turned on in CI via
# `cargo test --workspace --features nerve-core/test-internals`. Production builds
# never enable it, so the internals stay crate-private in the shipped engine.
test-internals = []

[dependencies]
aho-corasick.workspace = true
globset.workspace = true
memchr.workspace = true
# Pure, zero-internal-dep protocol-vocabulary crate (wasm-safe serde data). The
# kernel depends on it ONLY for the L0 provenance SHAPES (`Run`/`Event`/…) it
# content-addresses in `provenance.rs`; this adds no non-determinism (INV-R2) and
# no cycle (nerve-proto depends on nothing internal). See architecture-north-star §4.
nerve-proto.workspace = true
nucleo-matcher.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
# Cryptographic hash for content-addressing the run/event ledger (L0). Pure Rust,
# wasm-safe. Distinct from the non-crypto FNV-1a in `edit/text.rs` (whitespace-lossy,
# wrong for an audit trail receipts depend on).
sha2.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
similar = "2"
tree-sitter = "0.26.9"
tree-sitter-tags = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ignore.workspace = true
rayon.workspace = true

[dev-dependencies]
# Host-side filesystem provider, used ONLY by the relocated provider-dependent
# integration tests in `tests/` (a separate compilation unit). It must never be a
# normal dependency: that would be a true dependency cycle (nerve-fs -> nerve-core),
# and even as a dev-dependency it must not be referenced from in-src `#[cfg(test)]`
# modules, which would compile nerve-core twice ("multiple versions of crate
# nerve_core"). The provider-dependent tests therefore live in `tests/`, not in-src.
nerve-fs.workspace = true
tempfile.workspace = true
insta.workspace = true
serde_json.workspace = true
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "engine_hot_paths"
harness = false

[[bench]]
name = "edit_engine"
harness = false

[lints]
workspace = true
