[package]
name = "nerve-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Host-side leaf crate: the impure filesystem `CatalogProvider` lives here, OUT of
# the pure determinism kernel `nerve-core` (architecture-north-star §3.1 / §4). It
# depends on the kernel for the `CatalogProvider` port + snapshot/model/security
# vocabulary and the codemap-parse facade, and adds the std filesystem + ignore
# walker. Nothing here is golden-tested; all wall-clock / thread / SystemTime use
# the kernel forbids lives in this crate.
nerve-core.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
