[package]
name = "nerve-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
semantic = ["nerve-core/semantic"]

[dependencies]
anyhow.workspace = true
nerve-core = { path = "../nerve-core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
