[package]
name = "nerve-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nerve-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
futures.workspace = true
nerve-runtime = { path = "../nerve-runtime" }
qrcode.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
