[package]
name = "nerve-wechat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nerve-wechat"
path = "src/main.rs"

[dependencies]
base64.workspace = true
nerve-runtime = { path = "../nerve-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true

[lints]
workspace = true
