[package]
name = "nerve-workstation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

autobins = false

[[bin]]
name = "nerve"
path = "src/main.rs"

[features]
default = []
semantic = ["nerve-core/semantic", "nerve-runtime/semantic"]

[dependencies]
anyhow.workspace = true
directories.workspace = true
fs4.workspace = true
base64.workspace = true
clap.workspace = true
nerve-core = { path = "../nerve-core" }
nerve-runtime = { path = "../nerve-runtime" }
keyring.workspace = true
oauth2.workspace = true
open.workspace = true
rand.workspace = true
serde.workspace = true
schemars.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
