[package]
name = "nerve-workstation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

autobins = false

[[bin]]
name = "nerve"
path = "src/main.rs"

[features]
default = []

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
directories = { workspace = true }
ed25519-dalek = { workspace = true }
nerve-agent = { path = "../nerve-agent" }
nerve-core = { path = "../nerve-core" }
nerve-fs = { path = "../nerve-fs" }
nerve-runtime = { path = "../nerve-runtime" }
nerve-wechat = { path = "../nerve-wechat" }
serde.workspace = true
schemars.workspace = true
serde_json.workspace = true
tiny_http = { workspace = true }
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[lints]
workspace = true
